--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>RSK main page</title>
   </head>
   <body>
-<<h1>This is the main page as well as test page</h1>>
+<h1>This is the main page as well as test page</h1>
   </body>
 </html>
